wip, still some fixes left to do

--- a/trustpoint/templates/help/onboarding/cmp_application_credentials.html
+++ b/trustpoint/templates/help/onboarding/cmp_application_credentials.html
@@ -15,24 +15,27 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Help - No Onboarding - CMP Shared Secret' %}</h1>
+                    <h1>{% trans 'Help - CMP Application Credentials ' %}</h1>
                 </div>
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
+
+
                     {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' %}
                         <h2>{% trans 'Summary' %}</h2>
                         <hr>
-                        {% include 'devices/help/generic_details/cmp_application_credential_summary_block.html' %}
-                        {% include 'devices/help/generic_details/cmp_shared_secret_summary_block.html' %}
+                        {% include 'help/generic_details/cmp_application_credential_summary_block.html' %}
 
                         <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
                         <hr>
-                        {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
+                        {% include 'help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
+                        {% include 'help/generic_details/generic_application_credential_key_gen_block.html' %}
+
                         {% if certificate_template == 'tls-server' %}
-                            {% include 'devices/help/no_onboarding/details/cmp_enroll_tls_server.html' %}
+                            {% include 'help/onboarding/application_credential_details/cmp_enroll_tls_server.html' %}
                         {% elif certificate_template == 'tls-client' %}
-                            {% include 'devices/help/no_onboarding/details/cmp_enroll_tls_client.html' %}
+                            {% include 'help/onboarding/application_credential_details/cmp_enroll_tls_client.html' %}
                         {% endif %}
                     {% else %}
                         <div class="alert alert-warning" role="alert">
@@ -40,13 +43,16 @@
                             <code>{{ certificate_template }}</code>.
                         </div>
                     {% endif %}
+
+
                 </div>
 
             </div>
-            <div class="card-footer">
-                <div class="tp-card-btn-footer">
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <div class="tp-card-btn-footer m-1">
                     <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
+                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
+                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
                 </div>
             </div>
         </div>
