--- a/trustpoint/templates/help/onboarding/est_username_password.html
+++ b/trustpoint/templates/help/onboarding/est_username_password.html
@@ -21,34 +21,34 @@
             <div class="card-body">
                 <div class="tp-card-centered-content">
 
-                    {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=False expected_allow_username_registration=True expected_username_auth=True expected_domain_auth=False %}
+                    {% include 'help/generic_details/est_notifications_block.html' with expected_allow_app_certs=False expected_allow_username_registration=True expected_username_auth=True expected_domain_auth=False %}
 
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
 
-                    {% include 'devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html' %}
-                    {% include 'devices/help/generic_details/est_username_password_summary_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/est_domain_credential_summary_block.html' %}
+                    {% include 'help/generic_details/est_username_password_summary_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Create Keypair and Certificate Signing Request (CSR)' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/generic_domain_credential_key_gen_block.html' %}
-                    {% include 'devices/help/onboarding/domain_credential_details/est_domain_credential_csr_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/generic_domain_credential_key_gen_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/est_domain_credential_csr_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
                     <hr>
-                    {% include 'devices/help/generic_details/download_tls_server_certificate_block.html' %}
+                    {% include 'help/generic_details/download_tls_server_certificate_block.html' %}
 
                     <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/est_capabilities_block.html' %}
-                    {% include 'devices/help/generic_details/est_curl_cacert.html' %}
+                    {% include 'help/onboarding/domain_credential_details/est_capabilities_block.html' %}
+                    {% include 'help/generic_details/est_curl_cacert.html' %}
                 </div>
 
             </div>
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
                     <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
+                    <a href="{% url clm_url pk=device.pk %}"
                        class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
             </div>
