--- a/trustpoint/templates/devices/credentials/certificate_download.html
+++ b/trustpoint/templates/devices/credentials/certificate_download.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                     <div class="tp-card-btn-footer m-1">
-                        <a href="{% url 'devices:certificate_lifecycle_management' pk=issued_credential.device.id %}" class="btn btn-secondary">{% trans 'Back' %}</a>
+                        <a href="{% url clm_url pk=issued_credential.device.id %}" class="btn btn-secondary">{% trans 'Back' %}</a>
                     </div>
                 </div>
         </div>
