--- a/trustpoint/templates/help/no_onboarding/est_gds_username_password.html
+++ b/trustpoint/templates/help/no_onboarding/est_gds_username_password.html
@@ -15,27 +15,31 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Help - No Onboarding - OPC UA GDS - CMP Shared Secret' %}</h1>
+                    <h1>{% trans 'Help - No Onboarding - OPC UA GDS - EST Username Password' %}</h1>
                 </div>
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
+
+                    {% include 'help/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
-                    {% include 'devices/help/generic_details/cmp_application_credential_summary_block.html' %}
-                    {% include 'devices/help/generic_details/cmp_shared_secret_summary_block.html' %}
-
-                    <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
+                    {% include 'help/generic_details/est_application_credential_opcua_summary_block.html' %}
+                    {% include 'help/generic_details/est_username_password_summary_block.html' %}
                     <hr>
-                    {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
-                    {% include 'devices/help/no_onboarding/details/cmp_enroll_application_credential_block.html' %}
+
+                    <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
+                    <hr>
+                    {% include 'help/generic_details/download_tls_server_certificate_block.html' %}
+
                 </div>
 
             </div>
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
+                    <a href="{% url clm_url pk=device.pk %}"
+                       class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
             </div>
         </div>
