--- a/trustpoint/templates/help/onboarding/cmp_idevid.html
+++ b/trustpoint/templates/help/onboarding/cmp_idevid.html
@@ -22,31 +22,28 @@
                 <div class="tp-card-centered-content">
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/cmp_domain_credential_summary_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/cmp_domain_credential_summary_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Download or Copy the Issuing CA certificate' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Prepare IDevID' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/generic_domain_credential_key_gen_block.html' %}
-                    {% include 'devices/help/onboarding/domain_credential_details/idev_p12_extraction_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/generic_domain_credential_key_gen_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/idev_p12_extraction_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Enroll Domain Credential' %}</h2>
                     <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/cmp_enroll_domain_credential_idevid_block.html' %}
+                    {% include 'help/onboarding/domain_credential_details/cmp_enroll_domain_credential_idevid_block.html' %}
                     <hr>
                 </div>
 
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                    {% if device.pk %}
-                        <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
-                           class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
-                    {% endif %}
+                    <button type="button" value="Back" class="btn btn-secondary btn-half"
+                            onClick="history.back()">{% trans 'Back' %}</button>
                 </div>
             </div>
         </div>
