--- a/trustpoint/templates/management/settings.html
+++ b/trustpoint/templates/management/settings.html
@@ -185,11 +185,11 @@
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
         {% trans "Log Configuration" %}
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse show" data-bs-parent="#accordionSettings">
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionSettings">
       <div class="accordion-body">
         <div class="card">
           <div class="card-body pt-4 pb-4">
