--- a/trustpoint/templates/help/onboarding/cmp_shared_secret.html
+++ b/trustpoint/templates/help/onboarding/cmp_shared_secret.html
@@ -34,9 +34,8 @@
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
-                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
+                    <a href="{% url clm_url pk=device.pk %}"
+                       class="btn btn-primary">{% trans "Back to Lifecycle Management" %}</a>
                 </div>
             </div>
         </div>
