--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -23,15 +23,23 @@
                 </li>
                 <li>
                     <div>{% trans 'Domain Credential Onboarding' %}</div>
-                    <div>{{ device.domain_credential_onboarding }}</div>
+                    <div>
+                        {% if device.onboarding_config %}
+                            {% trans 'True' %}
+                        {% else %}
+                            {% trans 'False' %}
+                        {% endif %}
+                    </div>
                 </li>
-                <li>
-                    <div>{% trans 'Onboarding protocol' %}</div>
-                    <div>{{ device.get_onboarding_protocol_display }}</div>
-                </li>
+                {% if device.onboarding_config %}
+                    <li>
+                        <div>{% trans 'Onboarding protocol' %}</div>
+                        <div>{{ device.onboarding_config.get_onboarding_protocol_display }}</div>
+                    </li>
+                {% endif %}
                 <li>
                     <div>{% trans 'PKI protocol' %}</div>
-                    <div>{{ device.get_no_onboarding_pki_protocol_display }}</div>
+                    <div>{{ pki_protocols }}</div>
                 </li>
                 <li>
                     <div>{% trans 'Domain' %}</div>
