--- a/trustpoint/templates/help/generic_details/est_username_password_summary_block.html
+++ b/trustpoint/templates/help/generic_details/est_username_password_summary_block.html
@@ -26,7 +26,11 @@
             <div>{% trans 'EST Password' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    {{ device.est_password }}
+                    {% if device.onboarding_config %}
+                        {{ device.onboarding_config.onboarding_est_password }}
+                    {% elif device.no_onboarding_config %}
+                        {{ device.no_onboarding_config.est_username_password }}
+                    {% endif %}
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
