Update `certificate_lifecycle_management.html` conditional logic for onboarding and PKI protocols

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -79,8 +79,8 @@
                 </li>
             </ul>
             <hr class="mb-5">
-            {% if not device.onboarding_config %}
-                {% if device.pki_protocol == device.PkiProtocol.MANUAL.value %}
+            {% if device.no_onboarding_config %}
+                {% if device.no_onboarding_config.pki_protocols == device.PkiProtocol.MANUAL.value %}
                     <h2>{% trans "Issue new Application Credentials" %}</h2>
                     <hr>
                     <div class="d-flex flex-wrap align-items-start gap-2">
