--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -171,7 +171,7 @@
             {% endif %}
 
             {% if device.onboarding_config %}
-                {% if device.onboarding_config.onboarding_protocol != 0 %}
+                {% if device.onboarding_config.get_pki_protocols %}
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
 
@@ -187,11 +187,15 @@
                                 {% trans "Help - Issue new Application Credentials" %}
                             </a>
                         {% endif %}
-
                     </h2>
                 {% else %}
                     <h2>{% trans "Issued Application Credentials" %}</h2>
+                    <div class="alert alert-info" role="alert">
+                        {% trans "No PKI protocols are configured for this device. Configure PKI protocols to enable application credential issuance." %}
+                    </div>
+
                 {% endif %}
+
             {% elif device.no_onboarding_config %}
                 {% comment %}Check if any protocol other than MANUAL (16) is enabled{% endcomment %}
                 {% if device.no_onboarding_config.pki_protocols != 16 and device.no_onboarding_config.pki_protocols != 0 %}
