Update `cmp_enroll_application_credential_block.html` to use `cmp_shared_secret`

--- a/trustpoint/templates/help/no_onboarding/details/cmp_enroll_application_credential_block.html
+++ b/trustpoint/templates/help/no_onboarding/details/cmp_enroll_application_credential_block.html
@@ -20,7 +20,7 @@
                     -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-client/ \<br>
                     -tls_used \<br>
                     -ref {{ device.id }} \<br>
-                    -secret pass:{{ device.cmp_shared_secret }} \<br>
+                    -secret pass:{{ cmp_shared_secret }} \<br>
                     -subject "/CN={{ cn_entry }}" \<br>
                     -days 10 \<br>
                     -newkey key.pem \<br>
