Update `cmp_enroll_domain_credential_shared_secret_block.html` to use `cmp_shared_secret`

--- a/trustpoint/templates/help/onboarding/domain_credential_details/cmp_enroll_domain_credential_shared_secret_block.html
+++ b/trustpoint/templates/help/onboarding/domain_credential_details/cmp_enroll_domain_credential_shared_secret_block.html
@@ -18,7 +18,7 @@
                     -server https://{{ host }}/.well-known/cmp/initialization/{{ device.domain }}/ \<br>
                     -tls_used \<br>
                     -ref {{ device.id }} \<br>
-                    -secret pass:{{ device.cmp_shared_secret }} \<br>
+                    -secret pass:{{ cmp_shared_secret }} \<br>
                     -subject "/CN=Trustpoint Domain Credential" \<br>
                     -newkey domain_credential_key.pem \<br>
                     -certout domain_credential_cert.pem \<br>
